Using Deleporter to demonstrate cross-process mocking

--- a/Guestbook.Spec/App.config
+++ b/Guestbook.Spec/App.config
@@ -15,4 +15,7 @@
   <appSettings>
     <add key="RootUrl" value="http://localhost:8080/"/>
   </appSettings>
-<startup><supportedRuntime version="v2.0.50727"/></startup></configuration>
+  <startup>
+    <supportedRuntime version="v2.0.50727"/>
+  </startup>
+</configuration>
