--- a/Guestbook/Guestbook.csproj
+++ b/Guestbook/Guestbook.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Deleporter">
+      <HintPath>..\Guestbook.Spec\External Assemblies\Deleporter.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
